fixing home assignment alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -244,6 +244,7 @@
     gap: 2rem;
     width: calc(100% - 300px);
     overflow-x: auto;
+    white-space: nowrap;
 }
 
 .home__body__layout {
